--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "virtualmidiport",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "virtualmidiport.js",
   "scripts": {
-    "build": "nexe -i index.js -o virtualmidiport"
+    "build": "enclose virtualmidiport.js"
   },
   "author": "David Konsumer <konsumer@jetboystudio.com> (http://konsumer.js.org)",
   "license": "MIT",
@@ -12,6 +12,6 @@
     "midi": "^0.9.5"
   },
   "devDependencies": {
-    "nexe": "^1.1.2"
+    "enclose": "^2.2.0"
   }
 }
