--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "virtualmidiport.js",
   "scripts": {
-    "build": "nexe -i virtualmidiport.js"
+    "build": "nexe -i virtualmidiport.js -o virtualmidiport"
   },
   "author": "David Konsumer <konsumer@jetboystudio.com> (http://konsumer.js.org)",
   "license": "MIT",
   "dependencies": {
+    "cli-spinner": "^0.2.5",
     "midi": "^0.9.5"
   },
   "devDependencies": {
